--- a/views/home.html
+++ b/views/home.html
@@ -48,78 +48,111 @@
         <div class="burger-manu">
             <i class="fa fa-bars burger"></i>
         </div>
-    </header>
-    <section>
+    
+    <section class="banner">
         <img src="/images/img-home-banner.jpg" width="360" alt="Banner de ofertas">
     </section>
-    <main>
+</header>
+    <main class="main">
         <section>
 
             <h3 class="titulares">Basado en tu última visita</h3>
-            <article>
+            <article class="articulo">
                 <img src="/images/img-cafetera-moulinex.jpg" width="360" alt="Cafetera" class="product_img">
-                
-                <p class="precio">$6.770</p>
-                <p class="descuento">40% off</p>
-                <h4 class="descripcion">Cafetera Moulinex</h4>
+                <div class="detalles">
+                    <div class="envio">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% off</p>
+                    <h4 class="descripcion">Cafetera Moulinex</h4>
+                </div>
             </article>
 
-            <article>
+            <article class="articulo">
                 <img src="/images/img-macbook-pro-2019.jpg" width="360" alt="MacBook" class="product_img">
-                
-                <p class="precio">$230.000</p>
-                <p class="descuento">20% off</p>
-                <h4 class="descripcion">MacBook Pro 2019</h4>
+                <div class="detalles">
+                    <div class="envio">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                    <p class="precio">$230.000</p>
+                    <p class="descuento">20% off</p>
+                    <h4 class="descripcion">MacBook Pro 2019</h4>
+                </div>
             </article>
 
-            <article>
+            <article class="articulo">
                 <img src="/images/img-samsung-galaxy-s10.jpg" width="360" alt="Teléfono Móvil Samsung Galaxy"
                     class="product_img">
-                
-                <p class="precio">$70.500</p>
-                <p class="descuento">10% off</p>
-                <h4 class="descripcion">Teléfono móvil Samsung Galaxy S10</h4>
+                <div class="detalles">
+                    <div class="envio">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% off</p>
+                    <h4 class="descripcion">Teléfono móvil Samsung Galaxy S10</h4>
+                </div>
             </article>
-            <article>
+            <article class="articulo">
                 <img src="/images/img-tv-samsung-smart.jpg" width="360" alt="SmartTv Samsung" class="product_img">
-                
-                <p class="precio">$23.200</p>
-                <p class="descuento">5% off</p>
+                <div class="detalles">
+                    <div class="envio">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                    <p class="precio">$23.200</p>
+                    <p class="descuento">5% off</p>
 
-                <h4 class="descripcion">SmartTv Samsung 43"</h4>
+                    <h4 class="descripcion">SmartTv Samsung 43"</h4>
+                </div>
             </article>
         </section>
 
         <section>
             <h3 class="titulares">Ofertas</h3>
-            <article>
+            <article class="articulo">
                 <img src="/images/img-cafetera-moulinex.jpg" width="360" alt="Cafetera" class="product_img">
-                
-                <p class="precio">$6.770</p>
-                <p class="descuento">40% off</p>
-                <h4 class="descripcion">Cafetera Moulinex</h4>
+                <div class="detalles">
+                    <div class="envio">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                    <p class="precio">$6.770</p>
+                    <p class="descuento">40% off</p>
+                    <h4 class="descripcion">Cafetera Moulinex</h4>
+                </div>
             </article>
-            <article>
+            <article class="articulo">
                 <img src="/images/img-macbook-pro-2019.jpg" width="360" alt="MacBook" class="product_img">
-                
-                <p class="precio">$230.000</p>
-                <p class="descuento">20% off</p>
-                <h4 class="descripcion">MacBook Pro 2019</h4>
+                <div class="detalles">
+                    <div class="envio">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                    <p class="precio">$230.000</p>
+                    <p class="descuento">20% off</p>
+                    <h4 class="descripcion">MacBook Pro 2019</h4>
+                </div>
             </article>
-            <article>
+            <article class="articulo">
                 <img src="/images/img-samsung-galaxy-s10.jpg" width="360" alt="Teléfono Móvil Samsung Galaxy"
                     class="product_img">
-                
-                <p class="precio">$70.500</p>
-                <p class="descuento">10% off</p>
-                <h4 class="descripcion">Teléfono móvil Samsung Galaxy S10</h4>
+                <div class="detalles">
+                    <div class="envio">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                    <p class="precio">$70.500</p>
+                    <p class="descuento">10% off</p>
+                    <h4 class="descripcion">Teléfono móvil Samsung Galaxy S10</h4>
+                </div>
             </article>
-            <article>
+            <article class="articulo">
                 <img src="/images/img-tv-samsung-smart.jpg" width="360" alt="SmartTv Samsung" class="product_img">
-                
-                <p class="precio">$23.200</p>
-                <p class="descuento">5% off</p>
-                <h4 class="descripcion">SmartTv Samsung 43"</h4>
+                <div class="detalles">
+                    <div class="envio">
+                        <i class="fas fa-truck"></i>
+                    </div>
+                    <p class="precio">$23.200</p>
+                    <p class="descuento">5% off</p>
+                    <h4 class="descripcion">SmartTv Samsung 43"</h4>
+                </div>
             </article>
         </section>
     </main>
