--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -2,33 +2,41 @@
     font-family: 'Roboto', sans-serif;
     font-size: 12px;
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
     
 }
 .header{
     background-color: #EAC926;
-    margin:auto;
-    width: 90vw;
+    width: 100vw;
+    padding-top: 10px;
 
 }
-    .logo{
-        width: 300px
+    .logo-barra{
+        display:flex;
+        margin-top: 10px;
+        
     }
-    .barra-busqueda{
-        background-color: white;
-        color:#ebebeb;
-        width: 200px;
-        margin-left: 10px;
-        border: solid #666 0.5px;
-        margin-bottom: 0;
-    }
-    .lupa{
-        background-color: white;
-        margin-left: 10px;
-        border: solid #666 0.5px;
-        width: 15px;
-        padding-left:3px;
-        margin-top: 0;
-    }
+        .logo{
+            width: 50%
+        }
+        .barra-lupa{
+            width: 50%;
+            display: flex;
+            margin-left: 10px;
+            height: 21px;
+        }
+            .barra-busqueda{
+                background-color: white;
+                color:#ebebeb;
+                margin: 0;
+            }
+            .lupa{
+                background-color: white;
+                width: 15px;
+                padding-left:3px;
+                margin: 0;
+            }
 
 
     .nav-bar{
@@ -51,8 +59,7 @@
         height: 30px;
         text-align: center;
         display: inline-block;
-        margin-right: 50px;
-        margin-left: 140px;
+        margin: 10px 50px 10px 140px;
         border-radius: 5px;
     }
 
@@ -62,11 +69,11 @@
 }   
       
     .banner img{
-        width: 90vw;
+        width: 100vw;
         margin: auto;
     }
 .main{
-    width: 90vw;
+    width: 100vw;
     margin:auto;
 }
     .articulo{
@@ -80,13 +87,24 @@
         .detalles{
             border-top: 1px solid #ebebeb;
             padding: 15px;
+            position: relative;
         }
-            .envio{
-                border:solid #39b54a 0.5px;
+
+        
+            .envio i{
+                display: block;
+                font-size: 16px;
+                padding:5px;
                 width: 30px;
                 height: 30px;
-                border-radius: 100px;
+                border:solid #39b54a 1px;
+                background-color: #fff;
+                border-radius: 50%;
+                position: absolute;
+                right: 20px;
+                top: -15px;
                 color: #39b54a;
+                
             }
 
 
@@ -96,18 +114,25 @@
                 padding:15px 5px;
                 margin: 0;
             }
-
-            .precio{
-                font-size: 18px;
+            .precio-descuento{
+                display:flex;
+                justify-content: space-between;
             }
+                .precio{
+                    font-size: 18px;
+                    width: 30%;
+                }
 
-            .descuento{
-                font-size: 16px;
-            }
+                .descuento{
+                    font-size: 16px;
+                    width: 40%;
+                    color: #39b54a;
+                }
 
             .descripcion{
                 font-size: 16px;
                 display: none;
+                margin-bottom: 10px;
             }
 
 .footer{
@@ -124,21 +149,52 @@
     }
 
     @media (min-width:361px){
-        .nav-bar{
-            display:block;
+        .logo-barra-mano{
+            display: flex;
         }
+            .mano{
+                margin-left: 10px;
+                margin-top: 10px;
+            }
+        .nav-bar{
+            display:flex;
+            justify-content: space-around;
+            padding-bottom: 10px;
+        }
+            
         .burger-manu{
             display:none;
+        }
+        .articulos-padre{
+            display: flex;
+            flex-flow: row wrap;
         }
         .descripcion{
         display:block;
         }
         .articulo{
         box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        flex: 1 1 40%;
         }
-
     }
 
+
     @media (min-width:769px){
-        
+        .articulo{
+            flex: 1 1 20%;
+            }
+        .nav-bar{
+            justify-content: space-between;
+        }
+            .site-nav{
+                display:flex;
+                justify-content: space-around;
+                width: 40%;
+            }
+              
+            .login-nav{
+                display: flex;
+                width: 40%;
+                justify-content: space-around;
+            }
     }
