--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -6,6 +6,7 @@
     padding: 0;
     
 }
+/*================== header =======================*/
 .header{
     background-color: #EAC926;
     width: 100vw;
@@ -62,7 +63,7 @@
         margin: 10px 50px 10px 140px;
         border-radius: 5px;
     }
-
+/*================== banner =======================*/
 .banner{
     margin:auto;
     background-color: #ebebeb;
@@ -72,6 +73,7 @@
         width: 100vw;
         margin: auto;
     }
+/*================== main Home =======================*/
 .main{
     width: 100vw;
     margin:auto;
@@ -134,7 +136,105 @@
                 display: none;
                 margin-bottom: 10px;
             }
+/*================== formulario register =======================*/
+.form{
+    background-color: gainsboro;
+}
+.register{
+    padding: 20px 15px;
+    text-align: center;
+}
+.control-formulario{
+    margin-bottom: 15px;
+}
+.label{
+    font-style: normal;
+    width: 100%;
+    margin-bottom: 15px;
+    display: inline-block;
+    text-align: left;
+    font-weight: bold;
+}
+.control{
+    width: 100%;
+    padding: 10px;
+    border-radius: 6px;
+    font-size: 15px;
+    border: none;
+    height: 30%;
+    margin-bottom: 15px;
+    box-sizing: border-box;
+    background-color: white;
+    max-width: 500px;
+   
+}
+.perfil{
+    margin-bottom: 15px;
+}
 
+[type="checkbox"], [type="radio"] {
+    box-sizing: border-box;
+    padding: 14px;
+    margin: 0 25px;
+    margin-bottom: 15px;
+}
+.intereses{
+    display: flex;
+    flex: 1 1 auto;
+    flex-flow: column ;
+    justify-self: start;
+    margin-bottom: 10px;
+}
+    .check{
+        display: flex;
+      }
+
+    .foto{
+        margin-bottom: 30px;
+    }
+
+.buttons{
+    display: flex;
+}
+    .boton-formulario{
+        background-color:#1259c3;
+        border: none;
+        width: 80%;
+        font-size: 15px;
+        color: #ffffff;
+        padding: 10px;
+        border-radius: 4px;
+        height: 35px;
+        margin: 2px;
+    }
+        
+/*================== formulario login =======================*/
+
+.form{
+    background-color: gainsboro;
+}
+.login{
+    padding: 20px 15px;
+    text-align: center;
+}
+    .button-login{
+        margin:auto;
+        padding:0;
+        max-width: 500px;
+    }
+        .boton-formulario-login{
+            margin:0;
+            padding:0;
+            width: 100%;
+            background-color:#1259c3;
+            border: none;
+            font-size: 15px;
+            color: #ffffff;
+            border-radius: 4px;
+            height: 35px;
+        }
+
+/*================== footer=======================*/
 .footer{
     text-align: center;
 }
@@ -151,6 +251,7 @@
     @media (min-width:361px){
         .logo-barra-mano{
             display: flex;
+            justify-content: space-around;
         }
             .mano{
                 margin-left: 10px;
@@ -196,5 +297,11 @@
                 display: flex;
                 width: 40%;
                 justify-content: space-around;
+            }
+            .lupa{
+                width:15%;
+            }
+            .barra-busqueda{
+                width:85%;
             }
     }
