--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,7 +21,7 @@
         .logo{
             width: 50%
         }
-        .barra-lupa{
+        .nav-bar-form{
             width: 50%;
             display: flex;
             margin-left: 10px;
@@ -136,6 +136,9 @@
                 display: none;
                 margin-bottom: 10px;
             }
+            .descripcion:hover{
+                display: block;
+            }
 /*================== formulario register =======================*/
 .form{
     background-color: gainsboro;
@@ -222,16 +225,21 @@
         padding:0;
         max-width: 500px;
     }
+    
         .boton-formulario-login{
             margin:0;
             padding:0;
             width: 100%;
-            background-color:#1259c3;
+            background-color:#7ba6e6;
             border: none;
             font-size: 15px;
             color: #ffffff;
             border-radius: 4px;
             height: 35px;
+        }
+
+        .boton-formulario-login:hover{
+            background-color: #0022AA;
         }
 
 /*================== footer=======================*/
@@ -242,11 +250,20 @@
     .icono-footer i{
         font-size: 2em;
         margin-bottom: 10px;
+        color: #03264c
+    }
+    .icono-footer i:hover{
+        color:#39b54a;
     }
 
     .legales{
         text-align: left;
-    }
+        margin: 15px 5px;
+        }
+
+    
+
+    /*================== medias queries=======================*/
 
     @media (min-width:361px){
         .logo-barra-mano{
@@ -270,13 +287,15 @@
             display: flex;
             flex-flow: row wrap;
         }
-        .descripcion{
-        display:block;
-        }
+            
         .articulo{
-        box-shadow: 0px 0px 10px rgb(100, 100, 100);
         flex: 1 1 40%;
         }
+        .articulo:hover{
+            box-shadow: 0px 0px 10px rgb(100, 100, 100);
+        }
+
+       
     }
 
 
@@ -304,4 +323,7 @@
             .barra-busqueda{
                 width:85%;
             }
+            .section-footer{
+                display: flex;
+            }            
     }
