--- a/views/login.html
+++ b/views/login.html
@@ -19,12 +19,13 @@
         <div class="logo-barra-mano">
             <div class="logo-barra">
                 <img class="logo" src="/images/logo-mercado-liebre.svg" width="360" alt="Logo de MercadoLiebre">
-                <div class="barra-lupa">
-                    <p class="barra-busqueda">Buscar producto, marca</p>
+                <form method="GET" action="/" class="nav-bar-form">
+                    <input type="text" class="barra-busqueda" placeholder="Buscar producto, marca" name="barrabusqueda">
                     <div class="lupa">
                         <i class="fas fa-search"></i>
                     </div>
-                </div>
+
+                </form>
             </div>
             <p class="mano">
                 <i class="fas fa-hand-holding-usd">Comprá en cuotas y sin tarjeta de crédito</i>
@@ -52,68 +53,74 @@
         <div class="burger-manu">
             <i class="fa fa-bars burger"></i>
         </div>
-    </header>
-    <section class="form">
-        <form method="POST" action="" class="login">
-            <div class="control-formulario">
-                <input type="text" placeholder="Nombre de usuario" name="username" class="control" required minlength="3">
-            </div>    
-            <div class="control-formulario">
-                <input type="password" placeholder="Ingrese la password" name="password" class="control" required minlength="8">
-            </div>             
-            <div class="button-login">
-                <button type="submit" class="boton-formulario-login"> Enviar
-                </button>
-            </div>
-        </form>
-    </section>
 
-    <footer class="footer">
-        <section>
-            <article>
-                <div class="icono-footer">
-    
-                    <i class="fas fa-credit-card"></i>
-    
-                </div>
-                <h3>Pagá con tarjeta o en efectivo</h3>
-                <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y
-                    siempre es
-                    seguro!</p>
-            </article>
+        <section class="banner">
+            <img src="/images/img-home-banner.jpg" width="360" alt="Banner de ofertas">
         </section>
-        <section>
-            <article>
-                <div class="icono-footer">
-    
-                    <i class="fas fa-gift"></i>
-    
+    </header>
+        <section class="form">
+            <form method="POST" action="" class="login">
+                <div class="control-formulario">
+                    <input type="text" placeholder="Nombre de usuario" name="username" class="control" required
+                        minlength="3">
                 </div>
-                <h3>Envío gratis desde $2.500</h3>
-                <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
-                    productos. Es un beneficio de Mercado Puntos.</p>
-            </article>
-        </section>
-        <section>
-            <article>
-                <div class="icono-footer">
-    
-                    <i class="fas fa-user-shield"></i>
-    
+                <div class="control-formulario">
+                    <input type="password" placeholder="Ingrese la password" name="password" class="control" required
+                        minlength="8">
                 </div>
-                <h3>Seguridad, de principio a fin</h3>
-                <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
-                    porque estás siempre protegid@.</p>
-            </article>
+                <div class="button-login">
+                    <button type="submit" class="boton-formulario-login"> Enviar
+                    </button>
+                </div>
+            </form>
         </section>
-        <section>
+
+        <footer class="footer">
+            <div class="section-footer">
+                <section>
+                    <article>
+                        <div class="icono-footer">
+    
+                            <i class="fas fa-credit-card"></i>
+    
+                        </div>
+                        <h3>Pagá con tarjeta o en efectivo</h3>
+                        <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en puntos de pago. ¡Y
+                            siempre es
+                            seguro!</p>
+                    </article>
+                </section>
+                <section>
+                    <article>
+                        <div class="icono-footer">
+    
+                            <i class="fas fa-gift"></i>
+    
+                        </div>
+                        <h3>Envío gratis desde $2.500</h3>
+                        <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                            productos. Es un beneficio de Mercado Puntos.</p>
+                    </article>
+                </section>
+                <section>
+                    <article>
+                        <div class="icono-footer">
+    
+                            <i class="fas fa-user-shield"></i>
+    
+                        </div>
+                        <h3>Seguridad, de principio a fin</h3>
+                        <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                            porque estás siempre protegid@.</p>
+                    </article>
+                </section>
+                <section>
+            </div>
             <article class="legales">
                 <h5>Copyright © 1999-2021 MercadoLiebre S.R.L.</h5>
             </article>
-        </section>
-    </footer>
-    </body>
-    
-    </html>
-    
-    
+            </section>
+        </footer>
+</body>
+
+</html>
