--- a/views/login.html
+++ b/views/login.html
@@ -59,7 +59,7 @@
         </section>
     </header>
         <section class="form">
-            <form method="POST" action="" class="login">
+            <form method="GET" action="" class="login">
                 <div class="control-formulario">
                     <input type="text" placeholder="Nombre de usuario" name="username" class="control" required
                         minlength="3">
