--- a/views/register.html
+++ b/views/register.html
@@ -59,7 +59,7 @@
         </section>
     </header>
     <section class="form">
-        <form method="POST" action="/" class="register">
+        <form method="GET" action="/" class="register">
             <div class="control-formulario">
                 <input type="text" placeholder="Nombre y Apellido" name="nomyapellido" class="control" required
                     minlength="3">
