Guille - corrección de detalles

--- a/views/login.html
+++ b/views/login.html
@@ -55,7 +55,7 @@
         </div>
     </header>
         <section class="form">
-            <form method="GET" action="" class="login">
+            <form method="GET" action="/" class="login">
                 <div class="control-formulario">
                     <input type="text" placeholder="Nombre de usuario" name="username" class="control" required
                         minlength="3">
