--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -16,10 +16,15 @@
     .logo-barra{
         display:flex;
         margin-top: 10px;
+        width: 80%;
+        align-items: center;
+        
         
     }
         .logo{
-            width: 50%
+            width: 50%;
+            margin: 0 5%;
+            
         }
         .nav-bar-form{
             width: 50%;
@@ -31,15 +36,20 @@
                 background-color: white;
                 color:#ebebeb;
                 margin: 0;
+                border:none;
             }
             .lupa{
                 background-color: white;
-                width: 15px;
-                padding-left:3px;
                 margin: 0;
+                align-self: center;
+                height: 100%;
+                width: 10%;
             }
 
-
+    .mano{
+        width: 70%;
+        padding: 5% 0 5% 5%;
+    }
     .nav-bar{
         display:none;
     }
@@ -51,6 +61,7 @@
                 color:#666;
                 text-decoration: none;
             }
+
     
     .burger-manu{
         background-color:  #03264C;
@@ -207,7 +218,7 @@
     display: flex;
 }
     .boton-formulario{
-        background-color:#1259c3;
+        background-color:#7ba6e6;;
         border: none;
         width: 80%;
         font-size: 15px;
@@ -216,6 +227,10 @@
         border-radius: 4px;
         height: 35px;
         margin: 2px;
+    }
+
+    .boton-formulario:hover{
+        background-color:#1259c3;
     }
         
 /*================== formulario login =======================*/
@@ -273,14 +288,11 @@
     /*================== medias queries=======================*/
 
     @media (min-width:361px){
-        .logo-barra-mano{
-            display: flex;
-            justify-content: space-around;
-        }
-            .mano{
-                margin-left: 10px;
-                margin-top: 10px;
+        
+            .logo-barra{
+                width:65%;
             }
+           
         .nav-bar{
             display:flex;
             justify-content: space-around;
@@ -307,12 +319,32 @@
 
 
     @media (min-width:769px){
+        .logo-barra-mano{
+            display: flex;
+            justify-content: space-around;
+        }
+        .mano{
+            margin-top: 10px;
+            width: 45%;
+        }
+            .mano i{
+                font-size: 14px;
+            }
+        .nav-bar-form{
+            max-width: 300px;
+            
+        }
         .articulo{
             flex: 1 1 20%;
             }
         .nav-bar{
             justify-content: space-between;
+            width:90%;
+            
         }
+            .nav-bar a{
+                font-size: 14px;
+            }
             .site-nav{
                 display:flex;
                 justify-content: space-around;
@@ -324,10 +356,8 @@
                 width: 40%;
                 justify-content: space-around;
             }
-            .lupa{
-                width:15%;
-            }
-            .barra-busqueda{
+           
+           .barra-busqueda{
                 width:85%;
             }
             .register{
